--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,21 +11,21 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse; /* configuração para deixar as linhas da tabela juntas */
-        }
-
-        tr.linha {
-            background-color: gray;
         }
 
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center;/* Alinhamento horizontal */
+            vertical-align: middle; /* Alinhamento vertical */
         }
 
-        td.dado {
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
+
     </style>
 </head>
 <body>
@@ -46,12 +46,12 @@
         <tr class="linha"> <!-- segunda linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!-- terceira linha -->
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr> <!-- quarta linha -->
             <td>A4</td>
