--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -29,5 +31,16 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem aperiam earum obcaecati id impedit, consequuntur at qui, assumenda inventore, officia nisi dolor omnis ea repudiandae ad facere distinctio et! Laudantium? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, magni cumque id laudantium dolorem similique tempora ipsam rerum numquam autem ratione ex laboriosam, recusandae eligendi explicabo! Ea officia sed corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed vitae nisi, iste voluptatum itaque accusamus, vel odio reiciendis, consequatur dignissimos fugit sit minima ab distinctio! Recusandae sapiente accusantium facilis vel?</p>
         </article>
     </main>
+
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
+
 </body>
 </html>
